# webpty

./: .gitignore  Cargo.toml  README.ko.md  README.md  package-lock.json  package.json  requirements-docs.txt
apps/server/: Cargo.toml  build.rs
apps/server/src/: main.rs
apps/server/ui/: index.html
apps/server/ui/assets/: index-0R8bnob4.css  index-8hKuM1l3.css  index-B-lpaZ0l.js  index-B4kyaHyy.css  index-B8Jn6nFZ.js  index-B9vPksC9.js  index-BIvG8NhV.css  index-BP3xjyxU.js  index-BSBvSVzs.js  index-BSH8pP1V.js  index-BkXI5214.css  index-Bo1kfUYL.css  index-C6fquYEJ.js  index-C769ovy6.js  index-CJ6s1z_s.js  index-CPHTn1DT.css  index-CT5J88Ed.js  index-CVLzgofX.css  index-CaJ5Om8C.css  index-CksgfElZ.js  index-CmL5cwvo.css  index-CnaKgOF2.css  index-Cq5rAy6Q.css  index-Cy1h63ke.js  index-CzgxsIjG.css  index-D-q7W932.js  index-D0RBvlRj.js  index-D35LgftG.js  index-D4EoHtKR.js  index-D4ykEBs0.js  index-DNxaWLpx.css  index-DQda0v0B.css  index-DT3QUxoD.css  index-DchJkVA8.css  index-DqYAsoHf.js  index-Dr2zkTLQ.css  index-Due4Eazb.css  index-E2eRIaD2.js  index-FczZtGGl.css  index-Nl3bTQjp.js  (+5 more)
apps/web/: README.md  eslint.config.js  index.html  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css  main.tsx  types.ts
apps/web/src/components/: TerminalViewport.tsx
apps/web/src/data/: demo.ts
apps/web/src/lib/: localization.ts  localization.types.ts  (+2 more)
config/: webpty.settings.json
docs/: compatibility.md  development-plan.md  implementation-audit.md  localization.md  research-spec.md  runtime-contracts.md
scripts/: capture_docs.py
(+2 files in other folders)
